--- a/less/header.less
+++ b/less/header.less
@@ -14,6 +14,7 @@ h2 {
 
     .social {
         color: @light-blue;
+        padding-left: 5px;
     }
 }
 nav{
