--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,7 +2,7 @@ body {
     background-image: url("/img/pilates.png"), url("/img/trainer.png");
     background-position: top right, top left;
     background-repeat: no-repeat;
-    background-size: 454px;
+    background-size: 434px;
 }
 .home-page {
     background: @light-grey;
